--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>hello World</h1>
+<h1>Hello, everyone!</h1>
 <p>I am hosted with Github Pages.</p>
 
 <h1>Sicheng Qian</h1>
