--- a/blogs.html
+++ b/blogs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>JJCAO | Resources for students</title>
+<title>JJCAO | Resources for Us</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="styles/reset.css" />
 <link type="text/css" rel="stylesheet" href="styles/960.css" />
@@ -16,8 +16,8 @@
     <div id="menu" class=" right shadow">
       <ul class="left">
         <li><a href="index.html">Home</a></li>
-        <!-- <li><a href="publications.html">Publications</a></li>
-        <li><a href="teaching.html">Resources for students</a></li> -->
+        <!-- <li><a href="publications.html">Publications</a></li> -->
+        <!-- <li><a href="teaching.html">Resources for students</a></li> -->
         <li><a href="people.html">People</a></li>
         <li><a href="links.html">Links</a></li>
         <li class="selected"><a href="blogs.html">Blogs</a><span></span></li>
