--- a/blogs.html
+++ b/blogs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-<title>JJCAO | Resources for Us</title>
+<title>QSC | Resources for Us</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="styles/reset.css" />
 <link type="text/css" rel="stylesheet" href="styles/960.css" />
@@ -49,7 +49,7 @@
 </div>
 <div id="outer-footer" >
   <div id="footer" class="container_12">
-    <p class="left">Copyright &copy; <a href="#">Domain Name</a> - All Rights Reserved</p>
+    <p class="left">Copyright &copy; <a href="#">qsc</a> - All Rights Reserved</p>
     <p class="right">Design By <a target="_blank" href="http://www.codeplay.co.za">Code Play Studios</a></p>
   </div>
 </div>
