--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ $(window).load(function () {
     <div id="menu" class=" right shadow">
       <ul class="left">
         <li class="selected"><a href="index.html">Home</a><span></span></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="teaching.html">Resources for students</a></li>
+        <!-- <li><a href="publications.html">Publications</a></li> -->
+        <!-- <li><a href="teaching.html">Resources for students</a></li> -->
         <li><a href="people.html">People</a></li>
         <li><a href="links.html">Links</a></li>
         <li><a href="blogs.html">Blogs</a></li>
