--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ $(window).load(function () {
     <div id="menu" class=" right shadow">
       <ul class="left">
         <li class="selected"><a href="index.html">Home</a><span></span></li>
-        <!-- <li><a href="publications.html">Publications</a></li> -->
         <!-- <li><a href="teaching.html">Resources for students</a></li> -->
         <li><a href="people.html">People</a></li>
         <li><a href="links.html">Links</a></li>
@@ -62,8 +61,7 @@ $(window).load(function () {
           <li><a href="http://aqsc.github.io/">CGGI Lab</a></li>
           <li>School of Mathematical Sciences</li>
           <li>Dalian University of Technology</li>
-          <li></li>             
-          <li>H-index: 10 | <a href="http://scholar.google.com.hk/citations?user=BJ0esbQAAAAJ&hl=en">Google citation</a> | <a href="http://dblp.uni-trier.de/pers/hd/c/Cao:Junjie">DBLP</a> | <a href="https://www.researchgate.net/profile/Junjie_Cao">Research Gate</a></li>          
+          <li></li>                      
         </ul>
           <!-- <p>School of Mathematical Sciences, Dalian University of Technology,  No.2 Linggong Road, Ganjingzi District, Dalian City, Liaoning Province, China 116024</p> -->     
       </div>
@@ -71,12 +69,14 @@ $(window).load(function () {
         <h2 class="dotted grey-shadow"><span>Research fields</span></h2>
         <div class="clear"></div>
         <ul class="listed-items">
+		  <li>Machine Learning</li>
+		  <li>Deep Learning</li>
+		  <li>Geometry Processing & 3D printing</li>
           <li>Point cloud analysis</li>
           <li>Shape analysis and model generation</li>
-          <li>Image & mesh saliency & defect detection</li>
           <li>Image & Shape filtering</li>
           <li>Labelling, segmentation & correspondence</li>
-          <li>Parameterization</li>
+          <li>C/C++/Python</li>
         </ul>
       </div>
     </div>
