--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ $(window).load(function () {
     <div id="menu" class=" right shadow">
       <ul class="left">
         <li class="selected"><a href="index.html">Home</a><span></span></li>
-        <!-- <li><a href="teaching.html">Resources for students</a></li> -->
         <li><a href="people.html">People</a></li>
         <li><a href="links.html">Links</a></li>
         <li><a href="blogs.html">Blogs</a></li>
@@ -58,7 +57,7 @@ $(window).load(function () {
           <li>Engineer</li>
           <li>figurebar at hotmail dot com</li>
           <li>Creative Thinking(Online Working) Online</li>
-          <li><a href="http://aqsc.github.io/">CGGI Lab</a></li>
+          <li><a href="http://aqsc.github.io/">My homepage</a></li>
           <li>School of Mathematical Sciences</li>
           <li>Dalian University of Technology</li>
           <li></li>                      
@@ -74,7 +73,7 @@ $(window).load(function () {
 		  <li>Geometry Processing & 3D printing</li>
           <li>Point cloud analysis</li>
           <li>Shape analysis and model generation</li>
-          <li>Image & Shape filtering</li>
+          <li>Image & Video Capturing</li>
           <li>Labelling, segmentation & correspondence</li>
           <li>C/C++/Python</li>
         </ul>
@@ -89,8 +88,8 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-              <li>March 27, 2016: "Legible Compact Calligrams" is conditionally accepted to SIGGRAPH 2016. More detials to come soon.</li>
-              <li>April 15, 2016: "Legible Compact Calligrams" is accepted to SIGGRAPH 2016.</li>
+              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement accepted to CGI2017. More detials to come soon.</li>
+              <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
             </ul>
         </div>
       </div>
