--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@ $(window).load(function () {
         <img alt="" src="images/psb.jpg" width="280">
       </div>
       <div id="article2" class="grid_4 ">
-        <h2 class="dotted grey-shadow"><span>Junjie Cao</span></h2>
+        <h2 class="dotted grey-shadow"><span>SiCheng Qian</span></h2>
         <div class="clear"></div>
          <ul class="listed-items">
           <li>Engineer</li>
-          <li>figurebar at hotmail dot com</li>
-          <li>Creative Thinking(Online Working) Online</li>
+          <li>figurebar@hotmail.com</li>
+          <li>Creative Thinking(Online Working)</li>
           <li><a href="http://aqsc.github.io/">My homepage</a></li>
           <li>School of Mathematical Sciences</li>
           <li>Dalian University of Technology</li>
