--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(window).load(function () {
       <div id="article3" class="grid_4 omega">
         <h2 class="dotted grey-shadow"><span>Research fields</span></h2>
         <div class="clear"></div>
-        <ul class="listed-items">
+         <ul class="listed-items">
 		  <li>Machine Learning</li>
 		  <li>Deep Learning</li>
 		  <li>Geometry Processing & 3D printing</li>
@@ -76,10 +76,24 @@ $(window).load(function () {
           <li>Image & Video Capturing</li>
           <li>Labelling, segmentation & correspondence</li>
           <li>C/C++/Python</li>
+         </ul>
+        </div>
+       </div>
+	   <div id="article4" class="grid_4 delta">
+        <h2 class="dotted grey-shadow"><span>Tools</span></h2>
+        <div class="clear"></div>
+         <ul class="listed-items">
+          <li>C/C++</li>
+          <li>Python</li>
+          <li>html/css/JS</li>
+          <li>JAVA</li>
+          <li></li>                      
         </ul>
+          <!-- <p>School of Mathematical Sciences, Dalian University of Technology,  No.2 Linggong Road, Ganjingzi District, Dalian City, Liaoning Province, China 116024</p> -->     
       </div>
-    </div>
+	   
     <div class="clear"></div>
+	
   </div>
 </div>
 <div id="info">
@@ -88,7 +102,7 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement accepted to CGI2017. More detials to come soon.</li>
+              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
               <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
             </ul>
         </div>
