--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ $(window).load(function () {
     </div>
   </div>
   <div id="bottom-content">
-    <div id="articles">
+    <!--<div id="articles">
       <div id="article1" class="grid_4 alpha">
         <img alt="" src="images/psb.jpg" width="280">
-      </div>
+      </div> -->
       <div id="article2" class="grid_4 ">
         <h2 class="dotted grey-shadow"><span>SiCheng Qian</span></h2>
         <div class="clear"></div>
