--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ $(window).load(function () {
     </div>
   </div>
   <div id="bottom-content">
-    <!--<div id="articles">
-      <div id="article1" class="grid_4 alpha">
+    <div id="articles">
+      <!--<div id="article1" class="grid_4 alpha">
         <img alt="" src="images/psb.jpg" width="280">
       </div> -->
       <div id="article2" class="grid_4 ">
