--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@ $(window).load(function () {
          <ul class="listed-items">
 		  <li>Machine Learning</li>
 		  <li>Deep Learning</li>
+		  <li>Image & Video Capturing</li>
 		  <li>Geometry Processing & 3D printing</li>
           <li>Point cloud analysis</li>
-          <li>Shape analysis and model generation</li>
-          <li>Image & Video Capturing</li>
+          <li>Shape analysis and model generation</li>        
           <li>Labelling, segmentation & correspondence</li>
-          <li>C/C++/Python</li>
          </ul>
         </div>
        
@@ -84,10 +83,10 @@ $(window).load(function () {
         <div class="clear"></div>
          <ul class="listed-items">
           <li>C/C++</li>
-          <li>Python</li>
-          <li>html/css/JS</li>
+          <li>Python/MATLAB</li>
+          <li>HTML/CSS/JS</li>
           <li>JAVA</li>
-          <li></li>                      
+          <li>PHOTOSHOP/MAYA/MESHLAB/LIBGIL/</li>                      
         </ul>
           <!-- <p>School of Mathematical Sciences, Dalian University of Technology,  No.2 Linggong Road, Ganjingzi District, Dalian City, Liaoning Province, China 116024</p> -->     
       </div>
