--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ $(window).load(function () {
         <h2 class="dotted grey-shadow"><span>SiCheng Qian</span></h2>
         <div class="clear"></div>
          <ul class="listed-items">
-          <li>Engineer</li>
+          <li>Algorithm Engineer</li>
           <li>figurebar@hotmail.com</li>
           <li>Creative Thinking(Online Working)</li>
           <li><a href="http://aqsc.github.io/">My homepage</a></li>
