--- a/links.html
+++ b/links.html
@@ -15,8 +15,8 @@
     <div id="menu" class=" right shadow">
       <ul class="left">
         <li><a href="index.html">Home</a></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="teaching.html">Resources for students</a></li>
+        <!-- <li><a href="publications.html">Publications</a></li>
+        <li><a href="teaching.html">Resources for students</a></li> -->
         <li><a href="people.html">People</a></li>
         <li class="selected"><a href="links.html">Links</a><span></span></li>
         <li><a href="blogs.html">Blogs</a></li>
