--- a/people.html
+++ b/people.html
@@ -1,8 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!--
 <body>
 <h1>
   Who?
 </h1>
+</body>
+</html> -->
+
+<title>PEOPLE | QSC</title>
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+<link type="text/css" rel="stylesheet" href="styles/reset.css" />
+<link type="text/css" rel="stylesheet" href="styles/960.css" />
+<link type="text/css" rel="stylesheet" href="styles/style.css" />
+<link type="text/css" rel="stylesheet" href="styles/style-default.css" id="style-switcher" />
+</head>
+<body>
+<div id="content" class="container_12">
+  <div id=top-content class="container_12">
+    <div id="logo" class="left"> <a href="index.html"><img src="images/logo.png" alt="" /></a> </div>
+    <div id="menu" class=" right shadow">
+      <ul class="left">
+        <li><a href="index.html">Home</a></li>
+        <!-- <li><a href="publications.html">Publications</a></li>
+        <li><a href="teaching.html">Resources for students</a></li> -->
+        <li><a href="contact-us.html">contact-us</a></li>
+        <li class="selected"><a href="links.html">Links</a><span></span></li>
+        <li><a href="blogs.html">Blogs</a></li>
+      </ul>
+    </div>
+</div>
+</div>
 </body>
 </html>
