--- a/people.html
+++ b/people.html
@@ -29,7 +29,50 @@
         <li><a href="blogs.html">Blogs</a></li>
       </ul>
     </div>
+   </div>
 </div>
-</div>
+
+
+<div id="primary-content" class="container_12">
+    <div class="columns">
+      <div class="grid_6 alpha">
+        <h2 class="dotted grey-shadow"><span>Shape Models</span></h2>
+        <div class="clear"></div>
+        <ul class="listed-items">
+            <li><a href="http://vovakim.com/projects/CorrsBlended/doc_data.php" target="_blank">Surface Correspondence Benchmark</a>&nbsp;(400 watertight meshes in 20 categories is a cool starting point for playing with triangular meshes)</li>  
+            <li><a href="http://visionair.ge.imati.cnr.it/ontologies/shapes/" target="_blank">AIM@Shape</a>&nbsp;(Digital Shape WorkBench v5.0)</li>
+            <li><a href="http://web.siat.ac.cn/~yunhai/ssl/ssd.htm" target="_blank">COSEG</a> (co-segmentation benchmark)</li>
+            <li><a href="http://shapenet.cs.stanford.edu/" target="_blank">ShapeNet</a></li>
+            <li><a href="http://www.cs.rug.nl/svcg/Shapes/SkelBenchmark">Skeletonization Benchmark</a></li>
+            <li><a href="http://redwood-data.org/3dscan/">A Large Dataset of Object Scans</a>:&nbsp;more than ten thousand&nbsp;RGBD&nbsp;scans of real objects&nbsp;&amp; reconstructed 3D models</li>
+        </ul>
+        <h2 class="dotted grey-shadow"><span>Shape Tools</span></h2>
+        <div class="clear"></div>
+        <ul class="listed-items">
+            <li>SAP Visual Enterprise Author 7 (Deep Exploration 6.5)： browsing, converting & simplifing meshes</li>
+            <li><a href="http://meshlab.sourceforge.net" target="_blank">MeshLab </a>:: mesh viewer & large amount of basic operations</li>
+            <li>Geomagic Studio: point cloud processing, reconstruction, ... </li>
+            <li>KeyShot 5: for cool rendering used for high quality paper</li>   
+            
+            <li><a href="http://web.siat.ac.cn/~liangliang/software.htm">Mapple</a> processing and visualizing point clouds and polygonal models. 
+                the use of modern GPU features for rendering and interacting with huge point clouds and polygonal models; 
+                 a nice and friendly user interface for rendering (e.g., copy/restore camera, walkthrough).
+            </li> 
+            <li><a href="http://web.siat.ac.cn/~liangliang/software.htm">PcdViewer</a> selection of points by sketching a rectangle, or by using a lasso tool. (source code avaliable).
+            </li> 
+            <li><a href="http://www.danielgm.net/cc/">CloudCompare</a>: 3D point cloud and mesh processing software Open Source Project.
+            </li> 
+        </ul>
+        <h2 class="dotted grey-shadow"><span>Common Tools</span></h2>
+        <div class="clear"></div>
+        <ul class="listed-items">
+            <li><a href="https://atom.io/" target="_blank">Atom</a>: A hackable text editor</li>
+            <li>PicPick</li>
+        </ul>
+        <div class="clear"></div>
+      </div>
+	</div>
+</div>	
+
 </body>
 </html>
