--- a/contact-us.html
+++ b/contact-us.html
@@ -33,10 +33,10 @@ function initialize() {
     <div id="menu" class=" right shadow"> <img src="images/menu-square.png" alt="" class="menu-square" />
       <ul class="left">
         <li><a href="index.html">Home</a></li>
-        <li><a href="single.html">Styles</a></li>
+        <!-- <li><a href="single.html">Styles</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="single-blog.html">Single Page</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="gallery.html">Gallery</a></li> -->
         <li><a href="contact-us.html">Contact Us</a></li>
       </ul>
     </div>
