--- a/contact-us.html
+++ b/contact-us.html
@@ -36,13 +36,13 @@ function initialize() {
         <!-- <li><a href="single.html">Styles</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="single-blog.html">Single Page</a></li>
-        <li><a href="gallery.html">Gallery</a></li> -->
-        <li><a href="contact-us.html">Contact Us</a></li>
+        <li><a href="gallery.html">Gallery</a></li> 
+        <li><a href="contact-us.html">Contact Us</a></li> -->
       </ul>
     </div>
     <div class="clear"></div>
     <div id="top-body" >
-      <h1 class="shadow">A free web template to jumpstart your business.</h1>
+      <h1 class="shadow"> jumpstart your business.</h1>
     </div>
   </div>
   <div id="primary-content" class="container_12">
@@ -73,9 +73,9 @@ function initialize() {
         </div>
         <p class="left">Address:</p>
         <div id="addresses">
-          <p> Addressline1 </p>
+          <p> figurebar@hotmail.com </p>
           <div class="clear"></div>
-          <p > Addressline2 </p>
+          <p > Tel:+86183**** </p>
           <div class="clear"></div>
           <p > Addressline3 </p>
         </div>
@@ -87,11 +87,11 @@ function initialize() {
         </div>
         <div id="right-info">
           <div class="clear"></div>
-          <p > +2711 123 1234 </p>
+          <p > +86183**** </p>
           <div class="clear"></div>
-          <p > +2711 123 1234 </p>
+          <p > +86183**** </p>
           <div class="clear"></div>
-          <p > test@company.com </p>
+          <p > figurebar@hotmail.com </p>
         </div>
       </div>
     </div>
