--- a/people.html
+++ b/people.html
@@ -31,8 +31,7 @@
     </div>
    </div>
 </div>
-
-
+<div class="clear"></div>
 <div id="primary-content" class="container_12">
     <div class="columns">
       <div class="grid_6 alpha">
@@ -41,7 +40,13 @@
 		</h1>    
       </div>
 	</div>
-</div>	
-
+</div>
+<div class="clear"></div>	
+<div id="outer-footer" >
+  <div id="footer" class="container_12">
+    <p class="left">Copyright &copy; <a href="#">Domain Name</a> - All Rights Reserved</p>
+    <p class="right">Design By <a target="_blank" href="http://www.codeplay.co.za">Code Play Studios</a></p>
+  </div>
+</div>
 </body>
 </html>
