--- a/people.html
+++ b/people.html
@@ -37,7 +37,9 @@
         <h1>
 			Who?
 		</h1>
-		<ul class="listed-items">
+		<h2 class="dotted grey-shadow"><span>Who are we?</span></h2>
+		<div class="clear"></div>
+		 <ul class="listed-items">
             <li>OpenGL: Refer to references and resources of our <a href="http://jjcao.github.io/ComputerGraphics/" target="_blank">
                 Computer Graphics</a> course</li>
             <li><a href="http://libigl.github.io/libigl/tutorial/tutorial.html" target="_blank">libigl</a>: a <strong>simple header-only</strong> library for geometry processingt. Combines the rapid prototyping familiar to Matlab with the performance and versatility of C++. Examples: computation of differential quantities and operators, real-time deformation, parametrization, numerical optimization and remeshing. <strong>Good tutorial!</strong></li>
