--- a/people.html
+++ b/people.html
@@ -34,10 +34,9 @@
 <div class="clear"></div>
 <div id="primary-content" class="container_12">
       <div class="grid_6 alpha">
-        <h1>
-			Who?
-		</h1>
-		<h2 class="dotted grey-shadow"><span>Who are we?</span></h2>
+        <div id="top-body" >
+			<h1 class="shadow"> Who are we?</h1>
+		</div>
 		<div class="clear"></div>
 		 <ul class="listed-items">
             <li>OpenGL: Refer to references and resources of our <a href="http://jjcao.github.io/ComputerGraphics/" target="_blank">
