--- a/people.html
+++ b/people.html
@@ -39,26 +39,28 @@
 		</div>
 		<div class="clear"></div>
 		 <ul class="listed-items">
-            <li>OpenGL: Refer to references and resources of our <a href="http://jjcao.github.io/ComputerGraphics/" target="_blank">
-                Computer Graphics</a> course</li>
-            <li><a href="http://libigl.github.io/libigl/tutorial/tutorial.html" target="_blank">libigl</a>: a <strong>simple header-only</strong> library for geometry processingt. Combines the rapid prototyping familiar to Matlab with the performance and versatility of C++. Examples: computation of differential quantities and operators, real-time deformation, parametrization, numerical optimization and remeshing. <strong>Good tutorial!</strong></li>
-            <li><a href="https://www.openmesh.org" target="_blank">OpenMesh</a>
-                  + LibQGLView: Flexible, efficient, lightweight, well documented and 
-                explained in homework of our <a href="http://jjcao.github.io/DigitalGeometry/" target="_blank">digital geometry</a> course.</li>
-            <li><a href="http://www.cgal.org/" target="_blank">CGAL</a> + LibQGLView: heavyweight, cover various areas needing geometric computation, well documented</li>
+			<li>Mathematics</li>
+			<li>Optimization Methods</li>
+            <li>Geometry modeling and processing</li>
+            <li>Geometric optimization in 3D printing</li>
+            <li>Image and Video processing</li>
+            <li>Shape Analysis</li>
             <li></li>
+			<li>OPENCV</li>
             <li>PCL (Point Cloud Library+VTK)</li>
-            <li>ReconstructMe: a powerful 3D real-time scanning & reconstruction system </li>  
+            <li>Virtual Reality</li>  
             <li></li>
-            <li>Vega FEM Library: physical deformation by Jernej Barbic who also has some other interesting code</li>
+            <li>Deep Learning</li>
+			<li>Model Quantization and Compression in FPGA/SOC/ASIC</li>
+            <li>Face Detection & Pedestrian Detection</li>			
+            <li>3D Scene Analysis, Recognition and Segmentation</li>			
+            <li></li>                        
+            <li>Internship at Chinese Academy of Sciences</li>
+			<li>EXPERIENCE at CASC</li>
+            <li>EXPERIENCE at *****</li>
+            <li>EXPERIENCE at *****</li>        
             <li></li>
-            <li>Starlab: efficient but less documents which lead to a steep learning curve.</li>
-            <li><a href="http://shapeop.org/" target="_blank">ShapeOp</a>:a header-only C++ library for static and dynamic geometry processing, using a unified framework for optimization under constraints. Examples of its applications include architectural design subject to geometric constraints, and physics simulation of elastic materials. No tutorial!</li>                        
-            <li>MEPP (CGAL + QT + LibQGLView) &nbsp;in French</li>            
             <li></li>
-            <li><a href="https://github.com/openMVG" target="_blank">openMVG</a> (open Multiple View Geometry library. Basis for 3D computer vision and Structure from Motion.)</li>        
-            <li>Graphite ( + numerical solvers)</li>
-            <li>Open Scene Graph (good renderer)</li>
         </ul>		
       </div>
 </div>
