--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ $(window).load(function () {
           <li>Algorithm Engineer</li>
           <li>figurebar@hotmail.com</li>
           <li>Creative Thinking(Online Working)</li>
-          <li><a href="http://aqsc.github.io/">My homepage</a></li>
+          <li><a href="https://github.com/aqsc/">My homepage</a></li>
           <li>School of Mathematical Sciences</li>
           <li>Dalian University of Technology</li>
           <li></li>                      
