--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
-              <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
+	      <li>May 1-20, 2017: carPlate recognition and detection.</li>
+	      <li>June 1-30, 2018: Pedestrian detection & Face detection.</li>
+	      <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
+              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>  
             </ul>
         </div>
       </div>
