--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ $(window).load(function () {
       <h1 class="shadow">Recent Research</h1>
       <div id="images" class="theme-default">
         <ul id="slider">
+		  <li><img src="images/adas5.PNG" alt="" /></li>
           <li><img src="images/calli-teaser.jpg" alt="" /></li>
           <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
           <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
@@ -101,10 +102,13 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-	      <li>June 1-30, 2018: Pedestrian detection & Face detection.</li>
-	      <li>May 1-20, 2017: car detection & CPL recognition and detection.</li>
-	      <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
-              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>  
+	          <li>August,2019-Now: Object detection and Recognition & semantic segmentation & instance segmentation in ADAS.</li>
+			  <li>October,2018-August,2019: Pedestrian detection & Face detection in smart security camera, in HiSi 16E.</li>
+			  <li>June-October, 2018: Motion Detection & Object Recognition, in HiSi EV100.</li>
+	          <li>May,2017-June, 2018: car detection & CPL recognition and detection.</li>
+	          <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
+              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
+              <li>2012-2017: Mathematical Research in Optimized Methods and Machine Learning.</li>  
             </ul>
         </div>
       </div>
