--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ $(window).load(function () {
 		  <li><img src="images/crossSection.PNG" alt="" /></li>
 		  <li><img src="images/frame.PNG" alt="" /></li>
           <li><img src="images/calli-teaser.jpg" alt="" /></li>
-          <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
+          <!--<li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
           <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
-          <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li>
+          <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li></div> -->
         </ul>
       </div>
     </div>
