--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ $(window).load(function () {
       <div id="images" class="theme-default">
         <ul id="slider">
 		  <li><img src="images/adas2.PNG" alt="" /></li>
-		  <li><img src="images/adas5.PNG" alt="" /></li>
+		  <!--<li><img src="images/adas5.PNG" alt="" /></li>-->
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
 		  <li><img src="images/adas_car.PNG" alt="" /></li>
 		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>
@@ -47,7 +47,7 @@ $(window).load(function () {
           <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
           <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
           <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
-          <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li></div> -->
+          <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li>-->
         </ul>
       </div>
     </div>
