--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ $(window).load(function () {
 		  <li><img src="images/adas2.PNG" alt="" /></li>
 		  <!--<li><img src="images/adas5.PNG" alt="" /></li>-->
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
-		  <li><img src="images/adas_car.PNG" alt="" /></li>
-		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>
+		  <!--<li><li><img src="images/adas_car.PNG" alt="" /></li>
+		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>-->
 		  <li><img src="images/crossSection.PNG" alt="" /></li>
 		  <li><img src="images/frame.PNG" alt="" /></li>
           <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
