--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript">
 $(window).load(function () {
     $("#slider").vSlider({
-        width: 900,
+        width: 960,
         height: 480,
     });
 })
@@ -38,10 +38,10 @@ $(window).load(function () {
       <div id="images" class="theme-default">
         <ul id="slider">
 		  <li><img src="images/adas2.PNG" alt="" /></li>
-		  <!--<li><img src="images/adas5.PNG" alt="" /></li>-->
+		  <li><img src="images/adas5.PNG" alt="" /></li>
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
-		  <!--<li><li><img src="images/adas_car.PNG" alt="" /></li>
-		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>-->
+		  <li><img src="images/adas_car.PNG" alt="" /></li>
+		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>
 		  <li><img src="images/crossSection.PNG" alt="" /></li>
 		  <li><img src="images/frame.PNG" alt="" /></li>
           <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
