--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ $(window).load(function () {
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
 		  <li><img src="images/adas_car.PNG" alt="" /></li>
 		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>
-		  <li><img src="images/crossSection.PNG" alt="" /></li>
-		  <li><img src="images/frame.PNG" alt="" /></li>
+		  <li><img src="images/crossSection.png" alt="" /></li>
+		  <li><img src="images/frame.png" alt="" /></li>
           <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
           <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
           <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
