--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@ $(window).load(function () {
       <h1 class="shadow">Recent Research</h1>
       <div id="images" class="theme-default">
         <ul id="slider">
+      <li><img src="images/0.3D_obstacle_detection_demo.gif" alt="" /></li>
+      <li><img src="images/1.occupancy_demo.gif" alt="" /></li>
+      <li><img src="images/2.openlaneV2_topology.gif" alt="" /></li>
+      <li><img src="images/3.lidar_gallery-10.57dd41f1.png" alt="" /></li>
+      <li><img src="images/5.cable_img.jpg" alt="" /></li>
 		  <li><img src="images/adas2.PNG" alt="" /></li>
 		  <li><img src="images/adas5.PNG" alt="" /></li>
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
