--- a/index.html
+++ b/index.html
@@ -113,12 +113,16 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-	          <li>August,2019-Now: Object detection and Recognition & semantic segmentation & instance segmentation in ADAS.</li>
-			  <li>October,2018-August,2019: Pedestrian detection & Face detection in smart security camera, in HiSi 16E.</li>
-			  <li>June-October, 2018: Motion Detection & Object Recognition, in HiSi EV100.</li>
+            <li>Jan,2022-Now: lead project on NeRF learning to reconstruct 3D scene in Smart Factory.</li>
+            <li>Jan,2022-Now: lead project on 3D obstacle detection in BEV, HD map construction, Lane topology learning, General Obstacle Detection(occupancy) in ADS.</li>
+            <li>Jan,2022-NOW: focus on screen touch algothms, including SIN/COS demodulation, TDM/CDM matrix , CIC, FIR, IQ to improve SNR performance in HiSi, Huawei.</li>
+            <li>Jan,2020-2022: lead project on human-machine interaction in XR, smart TV, smart Camera, which has been applied to many products, like Huawei Smart TV, XR product.</li>
+	          <li>August,2019-now: lead project on Object detection and Recognition & semantic segmentation & instance segmentation in consumer products on HI3796CV300/3556V200/3519AV100/3516DV300.</li>
+			      <li>October,2018-August,2019: Pedestrian detection & Face detection in smart security camera, in Hi3516EV200/Hi3516EV300/Hi3518EV300.</li>
+			      <li>June-October, 2018: Motion Detection & Object Recognition, in Hi3516EV100/Hi3559AV100.</li>
 	          <li>May,2017-June, 2018: car detection & CPL recognition and detection.</li>
-	          <li>June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
-              <li>May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
+	          <li>April,2016-June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
+              <li>April,2015-May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
               <li>2012-2017: Mathematical Research in Optimized Methods and Machine Learning.</li>  
             </ul>
         </div>
