--- a/index.html
+++ b/index.html
@@ -113,17 +113,24 @@ $(window).load(function () {
       <div id="blog">
         <div class="recent-post">
             <ul class="listed-items">
-	          <li>Jan,2022-Now: lead project and team on NeRF learning to reconstruct 3D scene in Smart Factory.</li>
+	          <li>Jan,2022-Now: lead project and team on 3D scene reconstruct, like NeRF learning, and graph learning in Smart Factory.
+		    We will release the first robot product. Expecting!!!</li>
+		  <li>2022-Now: We are in research of Differentiable ISP and tackle with Differentiable CV.</li>  
 	          <li>Jan,2022-Now: focus on NAS, distiller, quantization and other lightweight model techinique, few shot/semi-supervised learning methods, and so on in more areas and accumulate more experience on generic AI algos.</li>
             	  <li>Jan,2022-Now: lead project and team on 3D obstacle detection in BEV, HD map construction, Lane topology learning, General Obstacle Detection(occupancy) in ADS.</li>
                   <li>Jan,2022-Now: focus on screen touch algothms, signal processing methods including SIN/COS demodulation, TDM/CDM matrix , CIC, FIR, IQ to improve SNR performance in HiSi, Huawei.</li>
-                  <li>Jan,2020-2022: lead project and team on human-machine interactions in XR, smart TV, smart Camera, which have been applied to many products, like Huawei Smart TV, XR product.</li>
+                  <li>Jan,2020-2022: lead project and team on human-machine interactions in XR, smart TV, smart Camera, which have been applied to many products, like Huawei Smart TV, XR product.
+		    We have exploited the system of human-machine interaction which is very robust in single camera architure, and more robuster and smoother in dual-camera architecture. 
+		    The hand pose estimation can be on par with google's mediapipe, while it is more lighter weight than mediapipe. 
+		    And we also apply the human pose estimation into the smart Camera which can moniter elders' falling and smart TV which is more preferable to youngsters' body fitting. </li>
 	          <li>Jan,2020-Now: focus on the NPU development of Davinci Architecture. And exploit more algos and products based on Davinci. More detials to come soon.</li>
 		  <li>August,2019-now: lead project and team on Object detection and Recognition & semantic segmentation & instance segmentation in consumer products on HI3796CV300/3556V200/3519AV100/3516DV300.</li>
 		  <li>October,2017-August,2019: Pedestrian detection & Face detection in smart security camera in Hi3516EV200/Hi3516EV300/Hi3518EV300.
 			  We are the first pioneer to develop the AI network on the chip in this field.
 			  The algorithms have gotten the best performance to promote the products to the first place in the world at so far. 
-			  And the products have been applied into Huawei, HIK, Dahua, Uniview, Infinova, topsee, and so on. </li>
+			  And the products have been applied into Huawei, HIK, Dahua, Uniview, Infinova, topsee, and so on. 
+			  It is great exciting that the chips and algos are accepted by the consumers and costumers so comprehensively. 
+		    	  We have achieved the first place in the world from then on.</li>
 		  <li>June-October,2018: Motion estimation & Object Recognition, and the development of mixer-bit quantization method, which can be run timely at about 30fps in Hi3516EV100/Hi3559AV100.</li>
 	          <li>May,2017-June,2018: pedestrain、face、car detection & CPL recognition and detection.</li>
 		  <li>May,2017-Feb,2019: focus on the development of Wukong NPU Platform which can support caffe inference. We also focus on the quantization method which is non-linear quantized way in Wukong NPU. 
