--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ $(window).load(function () {
             <ul class="listed-items">
 	          <li>Jan,2022-Now: lead project and team on 3D scene reconstruct, like NeRF learning, and graph learning in Smart Factory.
 		    We will release the first robot product. Expecting!!!</li>
-		  <li>2022-Now: We are in research of Differentiable ISP and tackle with Differentiable CV.</li>  
+		  <li>2022-Now: We are in research of Differentiable ISP and also tackle with Differentiable CV.</li>  
 	          <li>Jan,2022-Now: focus on NAS, distiller, quantization and other lightweight model techinique, few shot/semi-supervised learning methods, and so on in more areas and accumulate more experience on generic AI algos.</li>
             	  <li>Jan,2022-Now: lead project and team on 3D obstacle detection in BEV, HD map construction, Lane topology learning, General Obstacle Detection(occupancy) in ADS.</li>
                   <li>Jan,2022-Now: focus on screen touch algothms, signal processing methods including SIN/COS demodulation, TDM/CDM matrix , CIC, FIR, IQ to improve SNR performance in HiSi, Huawei.</li>
@@ -123,7 +123,7 @@ $(window).load(function () {
 		    We have exploited the system of human-machine interaction which is very robust in single camera architure, and more robuster and smoother in dual-camera architecture. 
 		    The hand pose estimation can be on par with google's mediapipe, while it is more lighter weight than mediapipe. 
 		    And we also apply the human pose estimation into the smart Camera which can moniter elders' falling and smart TV which is more preferable to youngsters' body fitting. </li>
-	          <li>Jan,2020-Now: focus on the NPU development of Davinci Architecture. And exploit more algos and products based on Davinci. More detials to come soon.</li>
+	          <li>Jan,2020-Now: focus on the NPU development of Davinci Architecture. And exploit more algos and products based on Davinci. More details to come soon.</li>
 		  <li>August,2019-now: lead project and team on Object detection and Recognition & semantic segmentation & instance segmentation in consumer products on HI3796CV300/3556V200/3519AV100/3516DV300.</li>
 		  <li>October,2017-August,2019: Pedestrian detection & Face detection in smart security camera in Hi3516EV200/Hi3516EV300/Hi3518EV300.
 			  We are the first pioneer to develop the AI network on the chip in this field.
@@ -136,7 +136,7 @@ $(window).load(function () {
 		  <li>May,2017-Feb,2019: focus on the development of Wukong NPU Platform which can support caffe inference. We also focus on the quantization method which is non-linear quantized way in Wukong NPU. 
 			  The quantization methods include the post quantization method and online quantization method.</li>
 	          <li>April,2016-June 30, 2017: "Self-supporting Frame Structures" is accepted to SMI2017.</li>
-                  <li>April,2015-May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More detials to come soon.</li>
+                  <li>April,2015-May 27, 2017: "Cross section-based hollowing and structural enhancement" accepted to CGI2017. More details to come soon.</li>
                   <li>2012-2017: Mathematical Research in Optimized Methods and Machine Learning.</li>   
             </ul>
         </div>
