--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Sicheng Qian</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <link type="text/css" rel="stylesheet" href="styles/reset.css" />
-<link type="text/css" rel="stylesheet" href="styles/960.css" />
+<!--<link type="text/css" rel="stylesheet" href="styles/960.css" />  -->
 <link type="text/css" rel="stylesheet" href="styles/style.css" />
 <link type="text/css" rel="stylesheet" href="styles/style-default.css" id="style-switcher" />
 <link type="text/css" rel="stylesheet" href="styles/vslider.css" />
