--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@ $(window).load(function () {
       <h1 class="shadow">Recent Research</h1>
       <div id="images" class="theme-default">
         <ul id="slider">
-      <li><img src="images/0.3D_obstacle_detection_demo.gif" alt="" /></li>
-      <li><img src="images/1.occupancy_demo.gif" alt="" /></li>
-      <li><img src="images/2.openlaneV2_topology.gif" alt="" /></li>
-      <li><img src="images/3.lidar_gallery-10.57dd41f1.png" alt="" /></li>
-      <li><img src="images/5.cable_img.jpg" alt="" /></li>
+		  <li><img src="images/0.3D_obstacle_detection_demo.gif" alt="" /></li>
+		  <li><img src="images/1.occupancy_demo.gif" alt="" /></li>
+		  <li><img src="images/2.openlaneV2_topology.gif" alt="" /></li>
+		  <li><img src="images/3.lidar_gallery-10.57dd41f1.png" alt="" /></li>
+		  <li><img src="images/5.cable_img.jpg" alt="" /></li>
 		  <li><img src="images/adas2.PNG" alt="" /></li>
 		  <li><img src="images/adas5.PNG" alt="" /></li>
 		  <li><img src="images/adas_marking2.PNG" alt="" /></li>
@@ -49,10 +49,10 @@ $(window).load(function () {
 		  <li><img src="images/adas_keyPointsDet.PNG" alt="" /></li>
 		  <li><img src="images/crossSection.png" alt="" /></li>
 		  <li><img src="images/frame.png" alt="" /></li>
-          <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
-          <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
-          <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
-          <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li>-->
+		  <!--<li><img src="images/calli-teaser.jpg" alt="" /></li>
+		  <li><img src="images/geotopo-corre-teaser.jpg" alt="" /></li>
+		  <li><img src="images/geotop-corre-pipeline.jpg" alt="" /></li>
+		  <li><img src="images/geotopo-blender-teaser.jpg" alt="" /></li>-->
         </ul>
       </div>
     </div>
@@ -66,7 +66,7 @@ $(window).load(function () {
         <h2 class="dotted grey-shadow"><span>SiCheng Qian</span></h2>
         <div class="clear"></div>
          <ul class="listed-items">
-          <li>Algorithm Engineer</li>
+          <li>Advanced Algorithm Engineer & Project Manager</li>
           <li>figurebar@hotmail.com</li>
           <li>Creative Thinking(Online Working)</li>
           <li><a href="https://github.com/aqsc">My homepage</a></li>
