--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,4 +1,4 @@
-<!-- ---
+---
 layout: archive
 title: "Teaching"
 permalink: teaching/
@@ -9,10 +9,10 @@ author_profile: true
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
-{% endfor %} -->
+{% endfor %} 
 
 
----
+<!-- ---
 layout: archive
 title: 'Projects'
 permalink: projects/
@@ -24,7 +24,7 @@ redirect_from:
 
 {% include base_path %}
 
-Projects list:
+Projects list: -->
 
 .......
 
